crates/rlm-derive/tests/ui/missing_pyclass.stderr
error: RlmType requires a #[pyclass] attribute; use #[rlm_type] instead of deriving RlmType directly
 --> tests/ui/missing_pyclass.rs:4:8
  |
4 | struct MissingPyclass {
  |        ^^^^^^^^^^^^^^
